...

    Scaffold(
        topBar = {
            ShoppingAppBar(
                contents = {
                    Text(
                        text = "Shopping",
                        fontSize = 20.sp,
                        color = Color.White,
                        fontWeight = FontWeight.Normal,
                        lineHeight = 24.sp,
                        modifier = Modifier.weight(1f),
                    )
...
