...
    override fun setUpCountOfProductInCart(productInCart: List<ProductInCartUiState>) {
        homeAdapter.addCountOfProductInCart(productInCart)
    }

    override fun setUpProductsOnHome(
        products: List<ProductsByView>,
        shoppingCart: List<ProductInCartUiState>,
    ) {
        homeAdapter = HomeAdapter(shoppingCart, products, setUpClickListener())
        attachAdapter()
        setUpLayoutManager()
    }

...
